# vakya

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/vakya/: __init__.py  cli.py  config.py  exceptions.py  extractor.py  walker.py  writer.py
tests/: conftest.py  test_cli.py  test_config.py  test_extractor.py  test_walker.py  test_writer.py
