[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vakya"
dynamic = ["version"]
description = "CLI tool to extract audio files and metadata from Parquet datasets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["parquet", "audio", "cli", "dataset", "extraction", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyarrow>=12.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pandas",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
vakya = "vakya.cli:main"

[project.urls]
Repository = "https://github.com/your-username/vakya"
Issues = "https://github.com/your-username/vakya/issues"

[tool.hatch.version]
path = "src/vakya/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vakya"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true
